# face-recognition-cli

./: Cargo.toml  README.md
crates/dlib_wrappers/: Cargo.toml  build.rs
crates/dlib_wrappers/src/: face_detection.rs  face_encoding.rs  landmark_prediction.rs  lib.rs
src/: face_recognizer.rs  file_person_registry.rs  image_helpers.rs  main.rs  otel.rs  otp.rs  sqlite_person_registry.rs
src/migrations/: 20250830144500_initial.sql  20250830212300_add_encodings_table.sql
src/person_registry/: mod.rs  person_registry.rs  person_registry_file.rs  person_registry_sqlite.rs
