[package]
name = "face-recognition-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "face-recognition-cli"
path = "src/main.rs"

[workspace]
members = [
    "crates/*"
]

[dependencies]
clap = { version = "4.5.42", features = ["cargo"] }
directories = "6.0.0"
dlib_wrappers = { path = "crates/dlib_wrappers" }
image = "0.23.4"
opentelemetry = "0.30.0"
opentelemetry_sdk = "0.30.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
sqlite-vec = "0.1.6"
uuid = { version = "1.17.0", features = ["v4"] }
opentelemetry-stdout = "0.30.0"
once_cell = "1.21.3"
