[package]
name = "face-recognition-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "face-recognition-cli"
path = "src/main.rs"

[workspace]
members = [
    "crates/*"
]

[dependencies]
dlib_wrappers = { path = "crates/dlib_wrappers" }

clap = { version = "4.5.42", features = ["cargo"] }
directories = "6.0.0"
uuid = { version = "1.17.0", features = ["v4"] }
once_cell = "1.21.3"
image = "0.23.4"

#rusqlite = { version = "0.37.0", features = ["bundled"] }
sqlite-vec = "0.1.6"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }

opentelemetry = "0.30.0"
opentelemetry_sdk = "0.30.0"
opentelemetry-stdout = "0.30.0"
opentelemetry-otlp = "0.30.0"
libsqlite3-sys = "0.30.1"
log = "0.4.27"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
blake3 = "1.8.2"
